# zero-router

./: .gitignore  .gitmodules  Makefile  README.md  devnet-demo.json  docker-compose.yml  skill.md
.github/workflows/: deploy.yml
agent/src/: main.rs
frontend/: .env.example  Dockerfile  cloudbuild.yaml  package-lock.json  package.json
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/v1/chat/completions/: route.ts
frontend/src/components/: Console.tsx  DepositModal.tsx  DocsModal.tsx  LaunchButton.tsx  SkillSelector.tsx  WalletStatus.tsx  WormholeBackground.tsx  ZeroClawChat.tsx  ZeroClawHeader.tsx  ZeroClawTerminal.tsx
frontend/src/hooks/: useZeroClaw.ts
frontend/src/utils/: magic.ts  wallet-pool.ts
gateway/: .dockerignore  .env.example  Cargo.toml  Dockerfile
gateway/crates/base64ct/: Cargo.toml
gateway/crates/base64ct/src/: lib.rs
gateway/crates/blake3/: Cargo.toml
gateway/crates/blake3/src/: lib.rs
gateway/crates/constant_time_eq/: Cargo.toml
gateway/crates/constant_time_eq/src/: lib.rs
gateway/src/: main.rs
program/: Anchor.toml  Cargo.toml  package.json
program/programs/zerorouter/: Cargo.toml
program/programs/zerorouter/src/: lib.rs
tests/: api_test.sh
