[package]
name = "zerorouter-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
getrandom = "0.2.15"
futures-util = "0.3"
anchor-lang = "0.30.1"

[patch.crates-io]
constant_time_eq = { path = "crates/constant_time_eq" }
blake3 = { path = "crates/blake3" }
base64ct = { path = "crates/base64ct" }
